fix. now both memo cards are visible

--- a/public/css/kursinfo-admin-web.scss
+++ b/public/css/kursinfo-admin-web.scss
@@ -195,7 +195,7 @@ span.navigation {
     }
   }
 }
-.AdminPage--ShowDescription--PilotCourse {
+.AdminPage--ShowDescription--FirstRow {
   @extend %column;
   .card {
     width: 100%;
